Add current progress to Github

--- a/data/config.example.json
+++ b/data/config.example.json
@@ -5,6 +5,9 @@
     "prefix": "",
     "admin": [],
     "owner": [],
+    "private_server": {
+        "id": ""
+    },
     "db": {
         "database": "",
 		"username": "",
