--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
     "extends": "tesseract",
     "rules": {
         "no-empty-function": "off",
-        "max-len": "off"
+        "max-len": "off",
+        "no-unused-vars": "off"
     }
 }
